<resources>
    <string name="app_name">物流管理系统</string>
    <string name="title">物流管理系统</string>
    <string name="login">登陆</string>
    <string name="exit">退出</string>
    <string name="accountHint">帐号</string>
    <string name="passwordHint">密码</string>
    <string name="loginFailed">登陆失败，请检查用户名密码后重试</string>
    <string name="accountInvalid">帐号不能为空</string>
    <string name="passwordInvalid">密码长度需大于等于8</string>
    <string name="welcomeMessage">欢迎</string>
    <string name="logout">切换用户</string>
    <string name="username">我的用户名为：%s</string>
    <string name="password">我的密码为：%s</string>
    <string name="transportInfo">%1$s-%2$s</string>
    <string name="goodsInfo">%1$s %2$s件</string>
    <string name="no">No.%s</string>
    <string name="peopleInfo">收货人：%1$s(%2$s)</string>
    <string name="paidInfo">已付%s元</string>
    <string name="toPayInfo">到付%s元</string>
    <string name="showLocalWaybill">查看本地订单</string>
    <string name="to">到站：</string>
    <string name="from">发站：</string>
    <string name="noLabel">订单编号：</string>
    <string name="fromName">发货人：</string>
    <string name="toName">收货人：</string>
    <string name="fromTel">发货电话：</string>
    <string name="toTel">收货电话</string>
    <string name="goodsName">货物名称：</string>
    <string name="goodsCount">件数：</string>
    <string name="paid">已付运费：</string>
    <string name="toPay">到付运费：</string>
    <string name="addLocalWaybill">添加本地订单</string>
    <string name="showXmlWaybill">查看XML订单</string>
    <string name="showJsonWaybill">查看JSON订单</string>
    <string name="add">添加</string>
    <string name="back">返回</string>
    <string name="toError">到站不能为空</string>
    <string name="nameError">货物名称不能为空</string>
    <string name="countError">货物件数不能为空</string>
    <string name="addError">插入订单失败</string>
    <string name="addSuccess">插入订单成功</string>
    <string name="requestFailed">加载数据失败</string>
</resources>